nginx-ingress-openshift/devops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops
        image: dearguru95/devops-nginx:v1
        ports:
        - containerPort: 80
